# cpp_practice

basics/: CMakeLists.txt  conditionals.cpp  log.h  loops.cpp  main.cpp  pointers.cpp
classes/: main.cpp
